# manganese

./: .ocamlformat  README  README.md  dune-project  manganese.opam
interp/: dune  lexer.mll  main.ml  parser.mly
lib/: dune  eval.ml  exemplos.ml  expr.ml  typeinfer.ml  types.ml  val.ml
test/: dune  test_eval.ml  test_typeinfer.ml
