(lang dune 3.6)

(name manganese)

(generate_opam_files true)

(source
 (github aiwaverse/manganese))

(license Unlicense)

(package
 (name manganese)
 (synopsis "A L1 interpreter")
 (description "A L1 interpreter")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
